--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.3",
     "@tailwindcss/vite": "^4.1.13",
+    "framer-motion": "^12.23.22",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
